# CC-Core

./: CMakeLists.txt  README.md
include/: FNL.h
include/CC/: alphaindev.pb-c.h  alphaindev.proto  core.h  databus.h  entity.h  event.h  eventloop.h  eventpackets.h  item.h  netproto.h  player.h  server.h  type.h  world.h
include/protobuf-c/: protobuf-c.h
src/CC/: alphaindev.pb-c.c  core.c  databus.c  entity.c  event.c  eventloop.c  eventpackets.c  item.c  player.c  server.c  type.c  world.c  worldlight.cpp
src/protobuf-c/: protobuf-c.c
